# bacmapping

./: .gitignore  README.md  mapping.py  pyproject.toml  requirements.txt  setup.py  shortComm.csv
Examples/: Setting up example.ipynb  bacmapping.ipynb  bacmappingexample.ipynb
Examples/Ch19_example/: Ch19_bacmapping_example.ipynb  Setting up example.ipynb
Examples/Ch19_example/details/: includedLibraries.csv
Examples/Ch19_example/details/info/: RP11.GCF_000001405.38.118.unique_discordant.gff.info.txt
Examples/Ch19_example/details/reordered/: NC_000019.10
Examples/Ch19_example/details/repaired/: RP11_repaired.gff
Examples/Full_pipeline/: bacmappingexample.ipynb
Examples/details/: RP11.GCF_000001405.38.118.unique.gff  RP11.GCF_000001405.38.118.unique_concordant.gff  RP11.GCF_000001405.38.118.unique_discordant.gff  clone_acstate_9606.out  clone_acstate_9606_onlyfinished.out  library_9606.out
bacmapping/: __init__.py  bacmapping.py
