[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BAC Mapping"
version = "1.0"
authors = [
  { name="Eamon Winden", email="ewinden@wisc.edu" },
]
description = "A set of scripts used in the production and analysis of BAC maps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]